# gemmr

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
doc/: analyses_from_paper.rst  api.rst  conf.py  generative_model.rst  how_it_works.rst  index.rst  installation.rst  model_param_ana.rst  overview.rst  private_api.rst  quickstart.rst  requirements.txt  sample_size_calculation.rst
doc/analyses_from_paper/: analysis_of_prior_literature.ipynb  bootstrap.ipynb  cca_vs_pls_errors.ipynb  compatible_true_vs_observed_assocs.ipynb  crossloadings.ipynb  cv.ipynb  empirical_data_evaluate_analyses.ipynb  empirical_data_how_many_pcs.ipynb  empirical_data_powerlaw_exponents.ipynb  empirical_data_run_analyses.ipynb  my_config.py  n_per_ftr_parameterization.ipynb  pc_bias.ipynb  pls_required_sample_size_vs_variance_spectrum.ipynb  powerlaw_exponents.ipynb  required_sample_size.ipynb  required_sample_size_vs_powerlaw_decay.ipynb  sample_size_calculator.ipynb  samples_per_feature_dependence.ipynb  sparse.ipynb  (+2 more)
gemmr/: __init__.py  _version.py  generative_model.py  metrics.py  model_selection.py  plot.py  util.py
misc/: generate_palm.m
tests/: test_addon.py  test_analyzers.py  test_generative_model.py  test_interpolation.py  test_linear_model.py  test_loaders.py  test_macros.py  test_metrics.py  test_model_selection.py  test_plot.py  test_postproc.py  test_preprocessing.py  test_r_estimators.py  test_univariate_correlations.py  test_util.py  test_vanilla.py  testtools.py
(+20 files in other folders)
